Primera version Estable

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <section id="HOME" class="section-padding">
       <div class="header">
-        <!-- <div class="bg-color"> -->
+        <div class="bg-color">
           <header id="main-header">
           <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
@@ -196,9 +196,11 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h2 class="service-title pad-bt15">Servicios Industriales </h2>
-            <p class="sub-title pad-bt15">Facultados en la industria Aeronautica. Estamos capacitados para brindarle los siguientes servicios:</p>
+            <hr class="bottom-line">
+            <p class="sub-title pad-bt15 textoBlanco">Centrados en las necesidades de la industria moderna, y acordes a las nuevas tecnologias, Delta Sierra Ingenieria, provee inovacion en conjunto con acompañamiento profesional para lograr los objetivos en los proyectos que su negocio plantea</p>
             <hr class="bottom-line">
           </div>
+          <!-- 
           <center>
             <div class="col-md-4">
               <div class="service-item">
@@ -236,7 +238,7 @@
                     
               </div>
             </div>
-          </center>
+          </center> -->
         </div>
       </div>
     </section>
@@ -399,9 +401,9 @@
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="loction-info white">
-              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>Direccion Fisica<br>Cordoba Capital, Argentina CP: 5000</p>
+              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>Direccion Fisica:<br>Cordoba Capital, Argentina CP: 5000</p>
               <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>deltasierraingenieria@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>Telefono De la empresa</p>
+              <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+549-297-4701682</p>
             </div>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
@@ -411,15 +413,21 @@
                   <div class="form-group">
                     <input class="form-control" placeholder="Nombre y Apellido" type="text">
                   </div>
+
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input class="form-control" placeholder="Numero de Telefono" type="text">
+                    <input class="form-control" placeholder="E-Mail" type="text">
                   </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-6">
                   <div class="form-group">
                     <input type="text" placeholder="Asunto del Mensaje (Opcional)" class="form-control">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <input type="text" placeholder="Telefono (Opcional)" class="form-control">
                   </div>
                 </div>
                 <div class="col-md-12">
