Agregada de carrusel no te definitivo

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300|Raleway:300,400,900,700italic,700,300,600' rel='stylesheet' type='text/css'>
     <!-- Bootstrap CSS-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
     <!--Custom css-->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="css/full-slider.css" rel="stylesheet">
+
+
   </head>
+
+
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" onload="myFunction()">
     <div class="loader"></div>
     <div id="myDiv">
@@ -25,6 +31,10 @@
     <section id="HOME" class="section-padding">
       <div class="header">
         <div class="bg-color">
+
+
+
+
           <header id="main-header">
           <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
@@ -47,23 +57,14 @@
                       <li><a href="#serviceIndustrial">Industria</a></li>
                     </ul>
                   </li>
-                  <!--
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trabajo <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#recentwork">Ultimos Trabajos</a></li>
-                      <li><a href="#testimonial">Testimonios</a></li>
-                    </ul>
-                  </li>
-                  -->
-
-                  <!-- <li class=""><a href="#blog">Blog</a></li> -->
-
                   <li class=""><a href="#contact">Contactenos</a></li>
                 </ul>
               </div>
             </div>
           </nav>
+
+
+
           </header>
           <div class="wrapper">
           <div class="container">
