--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>Delta Sierra Ingeniería</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -71,6 +71,14 @@
         <!-- Wrapper for Slides -->
 
         <div class="carousel-inner">
+          <div class="panel-bienvenida" style="width: 200px;
+        ￼    position: absolute;
+        ￼    z-index: 20;
+        ￼    background-color: aquamarine;
+        ￼    right: 45%;
+        ￼    top: 45%;">
+            BIENVENIDOS
+          </div>
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/Slide/001.jpg');"></div>
