Hamburguesa de diego ganada

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="css/half-slider.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/estilos.css" rel="stylesheet">
 
 
 </head>
@@ -71,13 +72,11 @@
         <!-- Wrapper for Slides -->
 
         <div class="carousel-inner">
-          <div class="panel-bienvenida" style="width: 200px;
-        ￼    position: absolute;
-        ￼    z-index: 20;
-        ￼    background-color: aquamarine;
-        ￼    right: 45%;
-        ￼    top: 45%;">
-            BIENVENIDOS
+          <div class="panel-bienvenida">
+            VALE POR UNA HAMBURGUESA
+          </div>
+          <div class="hola">
+
           </div>
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
