Se arreglo la supersposicion en el responsive design

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
+        <!-- Fonts de Google -->
+        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+
         <!-- Custom CSS -->
         <link href="css/scrolling-nav.css" rel="stylesheet">
         <link href="css/half-slider.css" rel="stylesheet">
@@ -74,15 +77,18 @@
             <div class="carousel-inner">
 
 
-              <div class="panel-bienvenida">
-                  <div class="row">
-                      <!-- <div class="col-md-4 col-md-offset-4"> -->
-                          <div class="text-center">
-                              Esta hamburguesa esta centrada
-                          </div>
-                      <!-- </div> -->
-                  </div>
-              </div>
+                <div class="panel-bienvenida center">
+                    <div class="row">
+                        <!-- <div class="col-md-4 col-md-offset-4"> -->
+                        <div class="text-center">
+                            <!-- <h1 class="bnr-title titulo-principal"></h1> -->
+                            <h1 class="Texto-Bienvenida" style=" ">Delta Sierra Ingeniería</h1>
+                            <!-- <p class="bnr-para">Delta Sierra Ingeniería es un emprendimiento abocado a brindar soluciones, generar diseños, gestionar procesos en el ámbito de la industria mecánica y aeronáutica.</p> -->
+
+                        </div>
+                        <!-- </div> -->
+                    </div>
+                </div>
 
 
 
