Se arreglo la supersposicion en el responsive design

--- a/index.html
+++ b/index.html
@@ -199,63 +199,61 @@
         <!-- Services Section -->
         <section id="ServiceAeronautico" class="services-aero-section">
             <div class="container">
-              <div class="row">
-                <div class="col-md-12 text-center">
-                  <h2 class="service-title pad-bt15">SERVICIOS AERONÁUTICOS</h2>
-                  <p class="sub-title pad-bt15">Facultados en la industria Aeronáutica. Estamos capacitados para brindarle los siguientes servicios:</p>
-                  <hr class="bottom-line">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <hr class="bottom-line">
+                        <h2 class="service-title pad-bt15">SERVICIOS AERONÁUTICOS</h2>
+                        <hr class="bottom-line">
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="service-item">
+                            <h3><span>Gestoria</span></h3>
+                            <ul>
+                                <li>Tramites</li>
+                                <li>Carpeta Experimentales</li>
+                                <li>Matriculaciones</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="service-item">
+                            <h3><span>Asistecia</span></h3>
+                            <ul>
+                                <li>Análisis Estructural</li>
+                                <li>Análisis Aerodinamico</li>
+                                <li>Certificación</li>
+                                <li>Manuales Clasiscos y Digitales</li>
+                                <li>Planos</li>
+                                <li>Asistencia al Mantenimiento</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="service-item">
+                            <h3><span>Diseño</span></h3>
+                            <ul>
+                                <li>Parte y Componentes</li>
+                                <li>Informes Técnicos de Alteracion</li>
+                                <li>STC</li>
+                                <li>Diseño Conceptual y de Fabricación</li>
+                                <li>Alteraciones Mayores</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <center>
-                  <div class="col-md-4">
-                    <div class="service-item">
-                      <h3><span>Gestoria</span></h3>
-                      <ul>
-                        <li>Tramites</li>
-                        <li>Carpeta Experimentales</li>
-                        <li>Matriculaciones</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="service-item">
-                      <h3><span>Asistecia</span></h3>
-                      <ul>
-                        <li>Análisis Estructural</li>
-                        <li>Análisis Aerodinamico</li>
-                        <li>Certificación</li>
-                        <li>Manuales Clasiscos y Digitales</li>
-                        <li>Planos</li>
-                        <li>Asistencia al Mantenimiento</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="service-item">
-                      <h3><span>Diseño</span></h3>
-                      <ul>
-                        <li>Parte y Componentes</li>
-                        <li>Informes Técnicos de Alteracion</li>
-                        <li>STC</li>
-                        <li>Diseño Conceptual y de Fabricación</li>
-                        <li>Alteraciones Mayores</li>
-                      </ul>
-
-                    </div>
-                  </div>
-                </center>
-              </div>
             </div>
+
         </section>
         <section id="ServiceIndustrial" class="services-ind-section">
             <div class="container">
-              <div class="row">
-                <div class="col-md-12 text-center">
-                  <h2 class="service-title pad-bt15">Servicios Industriales </h2>
-                  <hr class="bottom-line">
-                  <p class="sub-title pad-bt15 textoBlanco">Centrados en las necesidades de la industria moderna, y acordes a las nuevas tecnologías, Delta Sierra Ingeniería, provee innovación en conjunto con acompañamiento profesional para lograr los objetivos en los proyectos que su negocio plantea</p>
-                  <hr class="bottom-line">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <hr class="bottom-line">
+                        <h2 class="service-title pad-bt15">Servicios Industriales</h2>
+                        <hr class="bottom-line">
+                        <p class="sub-title pad-bt15 textoBlanco">Centrados en las necesidades de la industria moderna, y acordes a las nuevas tecnologías, Delta Sierra Ingeniería, provee innovación en conjunto con acompañamiento profesional para lograr los objetivos en los proyectos que su negocio plantea</p>
+                    </div>
                 </div>
-              </div>
             </div>
         </section>
 
