--- a/index.html
+++ b/index.html
@@ -21,18 +21,37 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="navbar-header">
-                <button class="navbar-taggle" type="button" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Desplegar navegacion</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#" class="navbar-brand">Logotipo</a>
-            </div>
-        </nav>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- <a class="navbar-brand" href="#">Brand</a> -->
+                    <img src="img/LogoDeltaSierra.png" alt="DeltaSierraLogo" class="navbar-brand navbar-logo">
+                </div>
 
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="#home" class="page-scroll">Home</a></li>
+                        <li><a href="#sobreNosotros" class="page-scroll">Sobre Nosotros</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Servicios <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#serviciosAeronauticos" class="page-scroll">Aeronáuticos</a></li>
+                                <li><a href="#serviociosIndustriales" class="page-scroll">Industriales</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#contactanos" class="page-scroll">Contactanos</a></li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
