--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <!-- Fonts de Google -->
 
         <!-- Custom CSS -->
+        <link rel="stylesheet" href="css/estilo.css">
 
     </head>
 
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default dark-primary-color">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -37,17 +38,19 @@
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#home" class="page-scroll">Home</a></li>
-                        <li><a href="#sobreNosotros" class="page-scroll">Sobre Nosotros</a></li>
+                    <ul class="nav navbar-nav navbar-right text">
+                        <li class="active">
+                            <a href="#home" class="page-scroll text-primary-color popo">Home</a>
+                        </li>
+                        <li><a href="#sobreNosotros" class="page-scroll text-primary-color active">Sobre Nosotros</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Servicios <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle text-primary-color" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Servicios <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#serviciosAeronauticos" class="page-scroll">Aeronáuticos</a></li>
-                                <li><a href="#serviociosIndustriales" class="page-scroll">Industriales</a></li>
+                                <li><a href="#serviciosAeronauticos" class="page-scroll text-primary-color active">Aeronáuticos</a></li>
+                                <li><a href="#serviociosIndustriales" class="page-scroll text-primary-color">Industriales</a></li>
                             </ul>
                         </li>
-                        <li><a href="#contactanos" class="page-scroll">Contactanos</a></li>
+                        <li><a href="#contactanos" class="page-scroll text-primary-color">Contactanos</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
